2003-06-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/init.c, src/rbgtkmain.c: Call setlocale(LC_NUMERIC, "C") for some locales 
	which doesn't use "." as decimal-point.	Pointed out by Joao Pedrosa.
	* src/rbgtkbindingset.c: Added.
	* src/rbgtkobject.c: Add Gtk::Object#bindings_activate(from Bindings). 
	* src/rbgtkeditable.c: Change return value of Gtk::Editable#selection_bounds 
	same as Gtk::Label#selection_bounds.

2003-06-21  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtknotebook.c: Code cleanup. 
	Remove Gtk::Notebook#popup_disable/enable. 
	Use Gtk::Notebook#enable_popup= instead.
	Add constants for GtkNotebookTab.
	Improve Gtk::Notebook#append/prepend_page_menu.
	Change parameter order of Gtk::Notebook#insert_page, #insert_page_menu.

2003-06-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkmenu.c: Remove Gtk::Menu#set_path. 
	Use Gtk::Menu#set_accel_path instead.

2003-06-07  Geoff Youngs  <g@intersect-uk.co.uk>

	* src/rbgdkwindow.c: Gdk::Window.foreign() added
	* src/rbgdktextview.c: Fixed Gtk::TextView#get_window()

2003-06-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkstyle.c: Gtk::Style#paint_* accept nil for Gdk::Rectangle.
	Gtk::Style#lookup_icon_set accept symbol.

2003-06-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkfilesel.c: Fix segfault of Gtk::FileSelection#fileop_dialog.

2003-06-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkmenu.c: parameter of Gtk::Menu#popup was changed.
	Gtk::Menu#reorder_child, #reposition, #set_accel_group, #accel_group,
	#set_accel_path, #tearoff_state?, #set_path, #attach_to_widget.
	* src/rbgtkcolorsel.c: Add Gtk::ColorSelection.palette_to_string, 
	.palette_from_string.

2003-05-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/depend: Add a file.
	* extconf.rb: Follow mkmf-gnome2.rb position changes.
	* src/rbgtk.h: Remove a line for including rbglib.h.
	(because it is included by rbgobject.h)
	* sample/misc/t-gtksocket.rb: Follow Gtk::Socket changes.